docs: Make Swagger more detailed
