# backend/cmd/docs/swagger.json
@@ -1,8 +1,21 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "swagger for nano template",
+        "title": "Nano Template Api",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.example.com/support",
+            "email": "support@example.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:3000",
     "basePath": "/api/v1",
     "paths": {
         "/inspect": {
@@ -22,7 +35,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/pkg_services_common.InspectResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -45,7 +70,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -77,7 +114,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/pkg_services_common.TemplateResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -100,7 +149,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/example_com_nano_template_pkg_middleware.EmptyData"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -123,7 +184,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/pkg_services_user_sys.UserWithProfile"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -149,7 +222,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userSys.LoginRequest"
+                            "$ref": "#/definitions/pkg_services_user_sys.LoginRequest"
                         }
                     }
                 ],
@@ -157,7 +230,54 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/pkg_services_user_sys.LoginResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/user/logout": {
+            "get": {
+                "description": "user logout",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "logout user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/example_com_nano_template_pkg_middleware.EmptyData"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -183,7 +303,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userSys.RegisterRequest"
+                            "$ref": "#/definitions/pkg_services_user_sys.RegisterRequest"
                         }
                     }
                 ],
@@ -191,7 +311,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/pkg_services_user_sys.RegisterResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -217,7 +349,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userSys.ChangePasswordRequest"
+                            "$ref": "#/definitions/pkg_services_user_sys.ChangePasswordRequest"
                         }
                     }
                 ],
@@ -225,7 +357,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/example_com_nano_template_pkg_middleware.EmptyData"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -251,7 +395,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userSys.UpdateUserProfileRequest"
+                            "$ref": "#/definitions/pkg_services_user_sys.UpdateUserProfileRequest"
                         }
                     }
                 ],
@@ -259,7 +403,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/middleware.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/example_com_nano_template_pkg_middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/example_com_nano_template_pkg_middleware.EmptyData"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -267,7 +423,18 @@
         }
     },
     "definitions": {
-        "middleware.Response": {
+        "example_com_nano_template_pkg_config.TemplateFrontMatter": {
+            "type": "object",
+            "properties": {
+                "role": {
+                    "type": "string"
+                }
+            }
+        },
+        "example_com_nano_template_pkg_middleware.EmptyData": {
+            "type": "object"
+        },
+        "example_com_nano_template_pkg_middleware.Response": {
             "type": "object",
             "properties": {
                 "code": {
@@ -283,7 +450,35 @@
                 }
             }
         },
-        "userSys.ChangePasswordRequest": {
+        "pkg_services_common.InspectResponse": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "pkg_services_common.TemplateResponse": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "frontmatter": {
+                    "$ref": "#/definitions/example_com_nano_template_pkg_config.TemplateFrontMatter"
+                },
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "pkg_services_user_sys.ChangePasswordRequest": {
             "type": "object",
             "required": [
                 "new_password",
@@ -298,7 +493,7 @@
                 }
             }
         },
-        "userSys.LoginRequest": {
+        "pkg_services_user_sys.LoginRequest": {
             "type": "object",
             "required": [
                 "password",
@@ -313,7 +508,15 @@
                 }
             }
         },
-        "userSys.RegisterRequest": {
+        "pkg_services_user_sys.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "pkg_services_user_sys.RegisterRequest": {
             "type": "object",
             "required": [
                 "password",
@@ -328,7 +531,15 @@
                 }
             }
         },
-        "userSys.UpdateUserProfileRequest": {
+        "pkg_services_user_sys.RegisterResponse": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "pkg_services_user_sys.UpdateUserProfileRequest": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -347,6 +558,40 @@
                     "type": "string"
                 }
             }
+        },
+        "pkg_services_user_sys.UserWithProfile": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "signature": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "jwt format： Bearer {token}",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
